<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="25sp"
    app:cardCornerRadius="20dp"
    app:cardElevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt"
                style="@style/TextAppearance.MaterialComponents.Headline3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/Profile_update"
                android:textAlignment="textStart"
                android:textColor="#FF0015"
                android:textSize="22sp"
                android:textStyle="normal" />

            <ImageButton
                android:id="@+id/bt_close"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/close"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>



        <EditText
            android:id="@+id/ed_fullname"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn1_design"
            android:cursorVisible="true"
            android:hint="@string/full_name_hint"
            android:inputType="text"
            android:padding="15dp"
            android:textAlignment="textStart"
            android:textColor="#8E8E8E"
            android:textSize="14sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/ed_email_id"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn1_design"
            android:cursorVisible="true"
            android:hint="@string/hint_email"
            android:inputType="text"
            android:padding="15dp"
            android:textAlignment="textStart"
            android:textColor="#8E8E8E"
            android:textSize="14sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/ed_address"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn1_design"
            android:cursorVisible="true"
            android:hint="@string/Address"
            android:inputType="text"
            android:padding="15dp"
            android:textAlignment="textStart"
            android:textColor="#8E8E8E"
            android:textSize="14sp"
            android:textStyle="normal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_design"
            android:padding="5dp"
            android:text="@string/Update_profile"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>
</androidx.cardview.widget.CardView>