<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/realitve"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/otp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/backblackbg" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25sp"
                android:padding="10dp"
                android:text="@string/Enter_OTP"
                android:textAlignment="textStart"
                android:textColor="#FF0015"
                android:textSize="25sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_phone_no"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:padding="10dp"
                    android:text="--"
                    android:textAlignment="textStart"
                    android:textColor="#8A8A8A"
                    android:textSize="25sp" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Edit"
                    android:textAlignment="textStart"
                    android:textColor="#FF0015"
                    android:textSize="16sp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDigit1"
                    style="@style/etDigitsOTP"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="5sp"
                    android:nextFocusDown="@+id/etDigit2" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDigit2"
                    style="@style/etDigitsOTP"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="5sp"
                    android:nextFocusDown="@+id/etDigit3" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDigit3"
                    style="@style/etDigitsOTP"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="5sp"
                    android:nextFocusDown="@+id/etDigit4" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDigit4"
                    style="@style/etDigitsOTP"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="5sp"
                    android:nextFocusDown="@+id/etDigit5" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDigit5"
                    style="@style/etDigitsOTP"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="5sp"
                    android:nextFocusDown="@+id/etDigit6" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDigit6"
                    style="@style/etDigitsOTP"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="5sp" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/llContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_design"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnContinue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="center_horizontal"
                    android:paddingLeft="6dp"
                    android:paddingTop="8dp"
                    android:paddingRight="6dp"
                    android:paddingBottom="6dp"
                    android:text="@string/Verify"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <ProgressBar
                    android:id="@+id/pbVerify"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:theme="@style/AppTheme.WhiteAccent"
                    android:visibility="gone" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rlResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_red_light"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="6dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnResendCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:enabled="false"
                    android:paddingLeft="6dp"
                    android:paddingTop="8dp"
                    android:paddingRight="6dp"
                    android:paddingBottom="6dp"
                    android:text="@string/Resend"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCountDownTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/btnResendCode"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="4dp"
                    android:layout_toRightOf="@+id/btnResendCode"
                    android:gravity="center"
                    android:maxLines="1"
                    android:minWidth="20dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />
            </RelativeLayout>

        </LinearLayout>

    </FrameLayout>
</layout>